--- a/basefile/templates/basefile/login.html
+++ b/basefile/templates/basefile/login.html
@@ -1,16 +1,19 @@
 {% extends 'basefile/main.html' %}
 {% block content %}
 
-<h1>LOGIN</h1>
+<div class="header-bar">
+    <h1>LOGIN</h1>
+</div>
 
-<form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="login">
-</form>
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input class="button" type="submit" value="login">
+    </form>
+    <p>Dont have an acct? <a href="{% url 'register' %}">Register</a> </p>
 
-
-<p>Dont have an acct? <a href="{% url 'register' %}">Register</a> </p>
+</div>
 
 {% endblock content %}
 
