--- a/basefile/templates/basefile/register.html
+++ b/basefile/templates/basefile/register.html
@@ -1,15 +1,24 @@
 {% extends 'basefile/main.html' %}
 {% block content %}
 
-<h1>REGISTER</h1>
+<div class="header-bar">
+    <h1>REGISTER</h1>
+</div>
 
-<form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Register">
-</form>
+<div class=" card-body">
+    <form method="POST">
+        {% csrf_token %}
+        <label>{{form.username.label}}</label>
+        {{form.username}}
 
+        <label>{{form.password1.label}}</label>
+        {{form.password1}}
 
-<p>Already have an acct? <a href="{% url 'login' %}">LOGIN</a> </p>
+        <label>{{form.password2.label}}</label>
+        {{form.password2}}
+        <input style="margin-top: 10px;" class="button" type="submit" value="Register">
+    </form>
+    <p>Already have an acct? <a href="{% url 'login' %}">LOGIN</a> </p>
+</div>
 
 {% endblock content %}
