--- a/basefile/templates/basefile/task_confirm_delete.html
+++ b/basefile/templates/basefile/task_confirm_delete.html
@@ -1,12 +1,19 @@
 {% extends 'basefile/main.html' %}
 {% block content %}
 
-<a href="{% url 'tasks' %}">BACK</a>
-<form method="POST">
-    {% csrf_token %}
-    <p>Are you sure to delete? "{{task}}"</p>
-    <input type="submit" value="delete">
-</form>
+<div class="header-bar">
+    <a href="{% url 'tasks' %}">&#8592;BACK</a>
+</div>
+
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        <p>Are you sure to delete? "{{task}}"</p>
+        <input class="button" type="submit" value="delete">
+    </form>
+</div>
+
+
 
 {% endblock content %}
 
