--- a/todolistapp/templates/todolistapp/task_list.html
+++ b/todolistapp/templates/todolistapp/task_list.html
@@ -9,7 +9,10 @@
     </div>
 
     {% if request.user.is_authenticated %}
-    <a href="{% url 'logout' %}">LOGOUT</a>
+    <form method="POST" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button class="button" type="submit">LOGOUT</button>
+    </form>
     {% else %}
     <a href="{% url 'login' %}">LOGIN</a>
     {% endif %}
